--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ body {
 
 /* Hero Section */
 .hero {
-  background: url('../assets/images/hero-bg.jpg') no-repeat center center/cover;
+  background: url('../assets/icons/about-hero.jpg') no-repeat center center/cover;
   height: 80vh;
   display: flex;
   align-items: center;
